--- a/athletes.html
+++ b/athletes.html
@@ -19,62 +19,72 @@
         </div>
     </div>
     <header>
-        <div class="top-navigation">
-          <div class="burger-container">
-            <div id="burger">
-              <div class="bar topBar"></div>
-              <div class="bar btmBar"></div>
-            </div>
-          </div>
-          <ul class="menu">
-            <li class="menu-item"><a href="#">Home</a></li>
-            <li class="menu-item"><a href="#">Athletes</a></li>
-            <li class="menu-item"><a href="#">Equipment</a></li>
-            <li class="menu-item"><a href="#">Courses</a></li>
-            <li class="menu-item"><a href="#">Boat Trips</a></li>
-            <li class="menu-item"><a href="#">Location</a></li>
-          </ul>
-        </div>
-    </header>
-    <main>
-        <!-- Banner -->
-        <section class="banner" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);">
-            <article class="text">
-                <h1>Jeddah Freediving</h1>
-                <span class="text-type" data-wait="1500" data-words='["Quality equipment", "Awesome insructors", "What are you waiting for!"]'></span>
-                <div class="buttons">
-                    <button onclick="location.href='./equipment.html'" type="button"><span>Equiptment</span></button>
-                    <button onclick="location.href='#'" type="button"><span>Classes</span></button>
+        <!-- Navigation -->
+        <div class="top-navigation-background">
+            <div class="top-navigation">
+                <div class="burger-container">
+                    <div id="burger">
+                        <div class="bar topBar"></div>
+                        <div class="bar btmBar"></div>
+                    </div>
                 </div>
+                <ul class="menu">
+                    <li class="menu-item"><a href="./index.html">Home</a></li>
+                    <li class="menu-item"><a href="#">Athletes</a></li>
+                    <li class="menu-item"><a href="./equipment.html">Equipment</a></li>
+                    <li class="menu-item"><a href="#">Courses</a></li>
+                    <li class="menu-item"><a href="#">Boat Trips</a></li>
+                    <li class="menu-item"><a href="#">Location</a></li>
+                </ul>
+                <div class="menu-row">
+                    <a href="./index.html"><img src="./images/logo/logo-short.svg" alt=""></a>
+                    <ul class="row-listed">
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="#">Athletes</a></li>
+                        <li><a href="./equipment.html">Equipment</a></li>
+                        <li><a href="#">Courses</a></li>
+                        <li><a href="#">Boat Trips</a></li>
+                        <li><a href="#">Location</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- Banner -->
+        <section class="banner short" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/scuba-diver.jpg);">
+            <article class="text">
+                <h1>Our Athletes</h1>
+                <span class="text-type" data-wait="1500" data-words='["Osama", "Ishaq", "Mariam"]'></span>
             </article>
         </section>
+    </header>
+    <main>
         <!-- About athletes -->
-        <article class="main hidden">
-            <div class="icon" style="background-image: url(./images/icons/athletes.png);">
-                <img src="./images/icons/athletes.png" alt="">
+        <article class="athletes hidden">
+            <div class="icon">
+                <img src="./images/personal/osama.png" alt="Osama">
             </div>
             <div class="info">
-                <a href="./athletes.html"><h1>Our Athletes</h1></a>
+                <h1>Osama</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
-        <div class="full-width-background">
-            <article class="main inverted hidden">
-                <div class="icon" style="background-image: url(./images/icons/equipment.jpg);">
-                    <img src="./images/icons/equipment.jpg" alt="">
-                </div>
-                <div class="info">
-                    <a href="./equipment.html"><h1>Equipment</h1></a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
-                </div>
-            </article>
-        </div>
-        <article class="main hidden">
-            <div class="icon" style="background-image: url(./images/icons/courses.jpg);">
-                <img src="./images/icons/courses.jpg" alt="">
+        <hr>
+        <article class="athletes hidden">
+            <div class="icon">
+                <img src="./images/personal/ishaq.png" alt="Ishaq">
             </div>
             <div class="info">
-                <h1>Courses</h1>
+                <h1>Ishaq</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
+            </div>
+        </article>
+        <hr>
+        <article class="athletes hidden">
+            <div class="icon">
+                <img src="./images/personal/mariam.png" alt="Mariam">
+            </div>
+            <div class="info">
+                <h1>Mariam</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus molestie nunc non blandit. Morbi enim nunc faucibus a pellentesque sit. Massa vitae tortor condimentum lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis adipiscing nisl rhoncus mattis rhoncus urna.</p>
             </div>
         </article>
@@ -94,12 +104,12 @@
             <div class="navigation">
                 <h2>Quick Links:</h2>
                 <nav class="flex">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="./athletes.html">Athletes</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="#">Athletes</a></li>
                     <li><a href="./equipment.html">Equipment</a></li>
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Boat Trips</a></li>
-                    <li><a href="./location.html">Location</a></li>
+                    <li><a href="#">Location</a></li>
                 </nav>
             </div>
             <!-- Footer contact information -->
