--- a/stumble.html
+++ b/stumble.html
@@ -33,7 +33,7 @@
                 <li class="menu-item"><a href="#">Contact</a></li>
                 <li class="menu-item"><a href="#">Algorithms</a></li>
                 <li class="menu-item"><a href="#">Web Design</a></li>
-                <li class="menu-item"><a href="./stumble.html">Games</a></li>
+                <li class="menu-item"><a href="#">Games</a></li>
             </ul>
         </div>
         <div class="row-listed-navigation">
@@ -49,59 +49,42 @@
     </header>
     <main>
         <!-- Banner -->
-        <section class="banner">
+        <section class="banner short">
             <!-- style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);" -->
             <article class="text">
-                <h1>Abdulrahman Jouhari</h1>
-                <span class="text-type" data-wait="1500"
-                    data-words='["Web developer", "Graphic designer", "Game developer"]'></span>
-                <div class="buttons">
-                    <button onclick="location.href='#'" type="button"><span>Projects</span></button>
-                    <button onclick="location.href='#'" type="button"><span>Contact</span></button>
-                </div>
+                <h1>Stumble</h1>
             </article>
+            <div class="letters-animation">
+                <ul class="letters">
+                    <li>s</li>
+                    <li>t</li>
+                    <li>u</li>
+                    <li>m</li>
+                    <li>b</li>
+                    <li>l</li>
+                    <li>e</li>
+                </ul>
+            </div>
         </section>
-        <article class="main hidden">
-            <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <a href="">
-                    <h1>Algorithms</h1>
-                </a>
-                <p>Algorithms are much like the gears that keep a machine running. They are critical to many operations, and how they’re coded may save time when you can least afford it.
-                <br><br>
-                Many of our everyday tasks are rather menial, and can easily be automated or assisted by computer algorithms. Available is a list of algorithms that serve many different purposes. Each are labelled by their complexity, instructions, and the date at which they were created.</p>
-                <br>
-                <a class="blue-link" href="#"><span>Learn more</span>></a>
-            </div>
+        <article class="game">
+            <h1 class="error">Unfortunately, stumble is not yet supported in mobile and tablet :/</h1>
+            <h1 class="title">Stumble (In Production)</h1>
+            <iframe class="large-stumble-game" src="https://itch.io/embed-upload/2233743?color=333333" allowfullscreen="" width="1150" height="750" frameborder="0"></iframe>
+            <iframe class="small-stumble-game" src="https://itch.io/embed-upload/2233743?color=333333" allowfullscreen="" width="950" height="620" frameborder="0"></iframe>
         </article>
-        <article class="main inverted hidden">
-            <div class="icon">
-                <img src="./images/icons/web-design-icon.svg" alt="">
+        <article class="game-description hidden">
+            <div class="credits">
+                <h2>Credits</h2>
+                <p>By Abdulrahman Jouhari<br>
+                Framework: Unity<br>
+                Assets used: Bolt, Sunnyland<br></p>
+                <a class="blue-link" href="https://ajouhari.itch.io/stumble"><span>Alternate Link</span>></a>
             </div>
             <div class="info">
-                <a href="">
-                    <h1>Web design</h1>
-                </a>
-                <p>Sometimes I feel like cleaning my eyes out with soap after seeing the monstrosity that is a poorly designed, buggy website. But fear no more! Here I will show you what to do (and what not to do) when building a website.
-                <br><br>
-                Even though I like to bash some websites for being buggy and having a bad design, a journey of a thousand miles starts with one step, and it never hurts to try. Hopefully my repositories can be of some use. Here I showcase my web design progress, the good, the bad, and the ugly.</p>
-                <br>
-                <a class="blue-link" href="#"><span>Learn more</span>></a>
-            </div>
-        </article>
-        <article class="main hidden">
-            <div class="icon">
-                <img src="./images/icons/game-controller-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <h1>Game development</h1>
-                <p>There’s is no better feeling than that of a breezy summer night as a kid, staying indoors and playing your favorite game. Games are a great way to relax and enjoy the moment, and that’s what I aim for when creating my video games.</p>
-                <h3>- Stumble</h3>
-                <p>Stumble is my first game development project, making this game took a great deal of trial and error. But eventually, I got a working model as a foundation to what will later become a fully fledged, multi-level game. This was produced using the Unity framework, and the Bolt and Sunnyland assets. The game is currently not supported on mobile and tablets.</p>
-                <br>
-                <a class="blue-link" href="./stumble.html"><span>Play Stumble</span>></a>
+                <h2>Description:</h2>
+                <p>In an unpleasant surprise, Fabio the fox finds out that his brother Felix was taken hostage! To rescue his brother, 
+                Fabio sets out in a mission to cross the dangerous lands of Venaire, where the paths are winding and the people are 
+                not to be trusted! Can you help save him save Felix?</p>
             </div>
         </article>
     </main>
@@ -146,7 +129,6 @@
         </div>
     </footer>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/typewriter.js"></script>
 </body>
 
 </html>
