--- a/about.html
+++ b/about.html
@@ -49,75 +49,42 @@
     </header>
     <main>
         <!-- Banner -->
-        <section class="banner">
+        <section class="banner short">
             <!-- style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);" -->
             <article class="text">
-                <h1>Abdulrahman Jouhari</h1>
-                <span class="text-type" data-wait="1500"
-                    data-words='["Web developer", "Graphic designer", "Game developer"]'></span>
-                <div class="buttons">
-                    <button onclick="location.href='#'" type="button"><span>Projects</span></button>
-                    <button onclick="location.href='#'" type="button"><span>Contact</span></button>
-                </div>
+                <h1>Algorithms</h1>
             </article>
+            <div class="letters-animation">
+                <ul class="letters">
+                    <li>a</li>
+                    <li>b</li>
+                    <li>o</li>
+                    <li>u</li>
+                    <li>t</li>
+                </ul>
+            </div>
         </section>
-        <article class="main hidden">
+        <article class="main about hidden">
             <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
+                <img class="full" src="./images/personal/abdulrahman.jpg" alt="">
+                <img class="cropped" src="./images/personal/abdulrahman-cropped.jpg" alt="">
             </div>
             <div class="info">
                 <a href="">
-                    <h1>About</h1>
+                    <h1>My aims and objectives</h1>
                 </a>
-                <p>I'm Abdulrahman Jouhari, currently a high school student, and I'm very keen in computer science. I truly believe in free and open-source software, that said, I keep my all projects available to view and critique (open-source) under a MIT licence.
-                    <br><br>
-                    I hope you find my code to be of some interest, and if you have any inquires or recommendations, feel free to contact me through my email listed in the footer below.
-                </p>
-                <br>
-                <a class="blue-link" href="./about.html"><span>Learn more</span>></a>
-            </div>
-        </article>
-        <article class="main inverted hidden">
-            <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <a href="">
-                    <h1>Algorithms</h1>
-                </a>
-                <p>Algorithms are much like the gears that keep a machine running. They are critical to many operations, and how they’re coded may save time when you can least afford it.
-                <br><br>
-                Many of our everyday tasks are rather menial, and can easily be automated or assisted by computer algorithms. Available is a list of algorithms that serve many different purposes. Each are labelled by their complexity, instructions, and the date at which they were created.</p>
-                <br>
-                <a class="blue-link" href="./algorithms.html"><span>Learn more</span>></a>
-            </div>
-        </article>
-        <article class="main hidden">
-            <div class="icon">
-                <img src="./images/icons/web-design-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <a href="">
-                    <h1>Web design</h1>
-                </a>
-                <p>Sometimes I feel like cleaning my eyes out with soap after seeing the monstrosity that is a poorly designed, buggy website. But fear no more! Here I will show you what to do (and what not to do) when building a website.
-                <br><br>
-                Even though I like to bash some websites for being buggy and having a bad design, a journey of a thousand miles starts with one step, and it never hurts to try. Hopefully my repositories can be of some use. Here I showcase my web design progress, the good, the bad, and the ugly.</p>
-                <br>
-                <a class="blue-link" href="#"><span>Learn more</span>></a>
-            </div>
-        </article>
-        <article class="main inverted hidden">
-            <div class="icon">
-                <img src="./images/icons/game-controller-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <h1>Game development</h1>
-                <p>There’s is no better feeling than that of a breezy summer night as a kid, staying indoors and playing your favorite game. Games are a great way to relax and enjoy the moment, and that’s what I aim for when creating my video games.</p>
-                <h3>- Stumble</h3>
-                <p>Stumble is my first game development project, making this game took a great deal of trial and error. But eventually, I got a working model as a foundation to what will later become a fully fledged, multi-level game. This was produced using the Unity framework, and the Bolt and Sunnyland assets. The game is currently not supported on mobile and tablets.</p>
-                <br>
-                <a class="blue-link" href="./stumble.html"><span>Play Stumble</span>></a>
+                <p>To be able to achieve momentous tasks using only a computer with an internet connection is an ability I never take for granted. 
+                    But It wouldn’t be possible without the great minds that preceded us. Those that were never satisfied with the status quo. 
+                    Those that kept pushing for greater things. Those that invent, then reinvent themselves. Those that made the world a better 
+                    place. To them, I am thankful, and I hope to give back to mankind as they have done. <br><br>
+                    But how does one even go about making the world a better place? Well, think about all the times you were navigating the web 
+                    or using an application, and it took a long time to load, or even worse, it suddenly crashed. The world would be a better 
+                    place if we didn’t have to deal with that. <br><br>
+                    Nobody likes code that breaks or has an extremely long runtime. But that’s the harsh reality we have to face. There’s tons of 
+                    bad code all over the internet. That’s where I come in to fix it. I write my code to perfection, producing programs that won’t 
+                    break and with a runtime that is efficient as possible. <br><br>
+                    Although I prefer the <strong>Python</strong> programming language, I also have experience with the following: <strong>JavaScript, Java, HTML5, CSS.</strong> 
+                    As well as experience with the following frameworks: <strong>GitHub, Unity.</strong></p>
             </div>
         </article>
     </main>
@@ -162,7 +129,6 @@
         </div>
     </footer>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/typewriter.js"></script>
 </body>
 
 </html>
