--- a/stumble.html
+++ b/stumble.html
@@ -30,19 +30,19 @@
             </div>
             <ul class="menu">
                 <li class="menu-item"><a href="./index.html">Home</a></li>
-                <li class="menu-item"><a href="#">Contact</a></li>
-                <li class="menu-item"><a href="#">Algorithms</a></li>
-                <li class="menu-item"><a href="#">Web Design</a></li>
-                <li class="menu-item"><a href="#">Games</a></li>
+                <li class="menu-item"><a href="./about.html">About</a></li>
+                <li class="menu-item"><a href="./algorithms.html">Algorithms</a></li>
+                <li class="menu-item"><a href="./web-design.html">Web Design</a></li>
+                <li class="menu-item"><a href="./stumble.html">Games</a></li>
             </ul>
         </div>
         <div class="row-listed-navigation">
             <a href="./index.html"><img src="./images/logo/logo-white.svg" alt=""></a>
             <ul class="row-menu">
                 <li class=""><a href="./index.html">Home</a></li>
-                <li class=""><a href="#">Contact</a></li>
-                <li class=""><a href="#">Algorithms</a></li>
-                <li class=""><a href="#">Web Design</a></li>
+                <li class=""><a href="./about.html">About</a></li>
+                <li class=""><a href="./algorithms.html">Algorithms</a></li>
+                <li class=""><a href="./web-design.html">Web Design</a></li>
                 <li class=""><a href="./stumble.html">Games</a></li>
             </ul>
         </div>
@@ -96,7 +96,7 @@
                 <nav class="flex">
                     <li class=""><a href="https://www.linkedin.com/in/abdulrahman-jouhari/">Linkedin</a></li>
                     <li class=""><a href="https://stackoverflow.com/users/13521143/abdulrahman-jouhari">Stack Overflow</a></li>
-                    <li class=""><a href="https://github.com/ajouhari">Github</a></li>
+                    <li class=""><a href="https://github.com/ajouhari">GitHub</a></li>
                     <li class=""><a href="https://leetcode.com/ajouhari/">Leetcode</a></li>
                     <li class=""><a href="https://www.instagram.com/ajouhari2/">Instagram</a></li>
                 </nav>
@@ -106,9 +106,9 @@
                 <h2>Quick links:</h2>
                 <nav class="flex">
                     <li class=""><a href="./index.html">Home</a></li>
-                    <li class=""><a href="#">Contact</a></li>
-                    <li class=""><a href="#">Algorithms</a></li>
-                    <li class=""><a href="#">Web Design</a></li>
+                    <li class=""><a href="./about.html">About</a></li>
+                    <li class=""><a href="./algorithms.html">Algorithms</a></li>
+                    <li class=""><a href="./web-design.html">Web Design</a></li>
                     <li class=""><a href="./stumble.html">Games</a></li>
                 </nav>
             </div>
