--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <br><br>
                 Even though I like to bash some websites for being buggy and having a bad design, a journey of a thousand miles starts with one step, and it never hurts to try. Hopefully my repositories can be of some use. Here I showcase my web design progress, the good, the bad, and the ugly.</p>
                 <br>
-                <a class="blue-link" href="#"><span>Learn more</span>></a>
+                <a class="blue-link" href="./web-design.html"><span>Learn more</span>></a>
             </div>
         </article>
         <article class="main inverted hidden">
