--- a/web-design.html
+++ b/web-design.html
@@ -67,45 +67,43 @@
         </section>
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/gears-icon.svg" alt="">
+                <img class="web-page" src="./images/icons/the-good.png" alt="">
             </div>
             <div class="info">
                 <a href="">
                     <h1>The good</h1>
                 </a>
-                <p>There's a whole host of simple tasks that can be done more efficiently by algorithms, saving people much time and effort. Here I have documented a wide array of algorithms, of varying complexity and purposes.
+                <p>Making this finished product - the one you're viewing now - took much time and effort, and has been through multiple redesigns in order to become what it is now. It may still not be perfect, but it is much improved from what it was earlier.
                     <br><br>
-                    Most of the algorithms displayed are in Python; however, moving forward, many of the algorithms will be written in C++ as it has a runtime advantage. Keeping best practices in mind, I always aim to write my code to be simple, well-documented, and with the fastest runtime possible.</p>
+                    What makes this site good is it's simple and sleek look. This site also has more javascript than the others, enabling me to make eye-catching functions like the type writer animation. Speaking of which, the animations, such as the dropdown animation, is much smoother and appealing, adding to the modern, sleek design.</p>
                 <br>
-                <a class="blue-link" href="https://github.com/ajouhari/algorithms/tree/master/python-general"><span>View code in GitHub</span>></a>
+                <a class="blue-link" href="https://github.com/ajouhari/web-development/tree/master/002-pink-flamingo"><span>View code in GitHub</span>></a>
             </div>
         </article>
         <article class="main inverted hidden">
             <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
+                <img class="web-page" src="./images/icons/the-bad.png" alt="">
             </div>
             <div class="info">
                 <a href="">
                     <h1>The bad</h1>
                 </a>
-                <p>Search algorithms have two primary function: to find if a path exists between two locations, and if so, to find the shortest path between them. Here I will code and review multiple search algorithms, from a brute-force method, to a well-designed a-star search algorithm.
+                <p>I've learnt much from the making of this site. I started this site with the intention of making it in dark mode; however, upon making it so, I realized how poorly the colour clash with each other. I'd recommend picking your primary colors out before you start with the design.
                     <br><br>
-                    As trivial as they may seem looking from the outside, the inner working of a search algorithm is a complex and highly important mechanism of the internet. I try my best to understand and then explain the multiple ways to implement it and the advantages that each may serve.</p>
+                    Another shortcoming of this site is its badly sized elements. I realized the end-users don't need the navigation and buttons to be so large. Toning down the size of some elements in future projects made the site much less clunky and having better usability. Upon loading this site would also display in chunks, which looked unprofessional and outdated.</p>
                 <br>
-                <a class="blue-link" href="https://github.com/ajouhari/algorithms/tree/master/search-algorithms"><span>View code in GitHub</span>></a>
+                <a class="blue-link" href="https://github.com/ajouhari/web-development/tree/master/001-colorful-night"><span>View code in GitHub</span>></a>
             </div>
         </article>
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/sorted-bars-icon.svg" alt="">
+                <img class="web-page" src="./images/icons/the-ugly.png" alt="">
             </div>
             <div class="info">
                 <h1>The ugly</h1>
-                <p>From databases to e-commerce sites, sorting engines play a cruical role that makes a substancial difference. There are many ways to go about making one, and with today’s big data, it becomes increasingly important to use more and more efficient sorting algorithms to sift through the data.
+                <p>What could make of break a design is the colors you choose. A good rule of thumb is to limit the amount of colors you use to just a few, and avoid using bright, tacky colors; instead, opt for smoother, more vibrant color combinations, like blue and white. That said, I would recommend sticking with only greyscale shades for the text and the page background.
                     <br><br>
-                    Here I will code and review some of the best known sorting algorithms. For the purpose of simplicity and explaination, it will be written in Python, which is a great language to learn coding with.</p>
-                <br>
-                <a class="blue-link" href="https://github.com/ajouhari/algorithms"><span>View code in GitHub</span>></a>
+                    Another aspect that should be noted is the proportion of elements compared to each other. A clear example here is the proportion of the banner compared to the articles in the page. Also take note of the images used, for they could easily take up space and increase loading times, so it best to compress it or use a better file format.</p>
             </div>
         </article>
     </main>
