--- a/about.html
+++ b/about.html
@@ -65,9 +65,7 @@
             </div>
         </section>
         <article class="main about hidden">
-            <div class="icon">
-                <img class="full" src="./images/personal/abdulrahman.jpg" alt="">
-                <img class="cropped" src="./images/personal/abdulrahman-cropped.jpg" alt="">
+            <div class="icon face-picture" style="background-image: url('./images/personal/abdulrahman.svg')">
             </div>
             <div class="info">
                 <a href="">
