--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 <span class="text-type" data-wait="1500"
                     data-words='["Web developer", "Graphic designer", "Game developer"]'></span>
                 <div class="buttons">
-                    <button onclick="location.href='#'" type="button"><span>Projects</span></button>
-                    <button onclick="location.href='#'" type="button"><span>Contact</span></button>
+                    <button onclick="location.href='./algorithms.html'" type="button"><span>Projects</span></button>
+                    <button onclick="location.href='./about.html'" type="button"><span>About</span></button>
                 </div>
             </article>
         </section>
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
+                <img src="./images/icons/gears-icon.svg" alt="">
             </div>
             <div class="info">
                 <a href="">
