page-title-change

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About</title>
     <link rel="icon" type="image/x-icon" href="./images/logo/logo-main.svg" />
     <link rel="stylesheet" href="./assets/css/main.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
         <section class="banner short">
             <!-- style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);" -->
             <article class="text">
-                <h1>Algorithms</h1>
+                <h1>About</h1>
             </article>
             <div class="letters-animation">
                 <ul class="letters">
@@ -62,6 +62,8 @@
                     <li>o</li>
                     <li>u</li>
                     <li>t</li>
+                    <li>u</li>
+                    <li>s</li>
                 </ul>
             </div>
         </section>
