--- a/web-design.html
+++ b/web-design.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Web Design</title>
     <link rel="icon" type="image/x-icon" href="./images/logo/logo-main.svg" />
     <link rel="stylesheet" href="./assets/css/main.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
@@ -57,6 +57,9 @@
             </article>
             <div class="letters-animation">
                 <ul class="letters">
+                    <li>w</li>
+                    <li>e</li>
+                    <li>b</li>
                     <li>d</li>
                     <li>e</li>
                     <li>s</li>
